--- a/category.html
+++ b/category.html
@@ -2088,13 +2088,13 @@
                                             <g clip-path="url(#clip0_812_6139)">
                                                 <path
                                                     d="M0.480769 2.72873H2.99583C3.2091 3.53937 3.94814 4.13899 4.82474 4.13899C5.70135 4.13899 6.44038 3.53937 6.65365 2.72873H14.5192C14.7847 2.72873 15 2.51347 15 2.24796C15 1.98245 14.7847 1.76719 14.5192 1.76719H6.65359C6.44032 0.956549 5.70128 0.356934 4.82468 0.356934C3.94808 0.356934 3.20904 0.956549 2.99577 1.76719H0.480769C0.215256 1.76719 0 1.98245 0 2.24796C0 2.51347 0.215256 2.72873 0.480769 2.72873ZM4.82474 1.31847C5.33724 1.31847 5.75423 1.73546 5.75423 2.24796C5.75423 2.76046 5.33724 3.17745 4.82474 3.17745C4.31224 3.17745 3.89526 2.76046 3.89526 2.24796C3.89526 1.73546 4.31224 1.31847 4.82474 1.31847Z"
-                                                    fill="#fff" />
+                                                    fill="#000" />
                                                 <path
                                                     d="M14.5192 7.01914H11.3147C11.1015 6.2085 10.3624 5.60889 9.48583 5.60889C8.60923 5.60889 7.87019 6.2085 7.65692 7.01914H0.480769C0.215256 7.01914 0 7.2344 0 7.49991C0 7.76543 0.215256 7.98068 0.480769 7.98068H7.65699C7.87026 8.79126 8.60929 9.39094 9.4859 9.39094C10.3625 9.39094 11.1015 8.79126 11.3148 7.98068H14.5193C14.7848 7.98068 15.0001 7.76543 15.0001 7.49991C15.0001 7.2344 14.7847 7.01914 14.5192 7.01914ZM9.4859 8.4294C8.9734 8.4294 8.55641 8.01241 8.55641 7.49991C8.55641 6.98741 8.9734 6.57043 9.4859 6.57043C9.9984 6.57043 10.4154 6.98741 10.4154 7.49991C10.4154 8.01241 9.9984 8.4294 9.4859 8.4294Z"
-                                                    fill="#fff" />
+                                                    fill="#000" />
                                                 <path
                                                     d="M14.5192 12.2711H6.65359C6.44032 11.4605 5.70128 10.8608 4.82468 10.8608C3.94808 10.8608 3.20904 11.4605 2.99577 12.2711H0.480769C0.215256 12.2711 0 12.4864 0 12.7519C0 13.0174 0.215256 13.2326 0.480769 13.2326H2.99583C3.2091 14.0433 3.94814 14.6429 4.82474 14.6429C5.70135 14.6429 6.44038 14.0433 6.65365 13.2326H14.5192C14.7847 13.2326 15 13.0174 15 12.7519C15 12.4864 14.7847 12.2711 14.5192 12.2711ZM4.82474 13.6814C4.31224 13.6814 3.89526 13.2644 3.89526 12.7519C3.89526 12.2394 4.31224 11.8224 4.82474 11.8224C5.33724 11.8224 5.75423 12.2394 5.75423 12.7519C5.75423 13.2644 5.33724 13.6814 4.82474 13.6814Z"
-                                                    fill="#fff" />
+                                                    fill="#000" />
                                             </g>
                                             <defs>
                                                 <clipPath id="clip0_812_6139">
@@ -9292,7 +9292,13 @@
                             Оставьте свою почту и мы с вами свяжемся
                         </p>
                         <form class="feedback-banner__form">
-                            <input type="email" placeholder="Введите ваш email">
+                            <label data-input-required>
+                                <input type="email" placeholder="Введите ваш email" required>
+                                <span class="require-icon">
+                                    <span class="require-icon-hint"><b>!</b>&nbsp;Заполните это поле</span>
+                                </span>
+                            </label>
+                            
                             <button class="rect-btn rect-btn--feedback-banner white" type="submit">
                                 Подписаться
                             </button>
@@ -10181,32 +10187,32 @@
                 Популярные города
             </p>
             <ul class="city-select__cities">
-                <li class="city-select__city">
-                    <span>Екатеринбург</span>
+                <li class="city-select__city active">
+                    <a href="/">Екатеринбург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Москва</span>
+                <li class="city-select__city ">
+                    <a href="/">Москва</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Санкт-Петербург</span>
+                <li class="city-select__city ">
+                    <a href="/">Санкт-Петербург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Тюмень</span>
+                <li class="city-select__city ">
+                    <a href="/">Тюмень</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Новосибирск</span>
+                <li class="city-select__city ">
+                    <a href="/">Новосибирск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Казань</span>
+                <li class="city-select__city ">
+                    <a href="/">Казань</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Нижний Новгород</span>
+                <li class="city-select__city ">
+                    <a href="/">Нижний Новгород</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Красноярск</span>
+                <li class="city-select__city ">
+                    <a href="/">Красноярск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Челябинск</span>
+                <li class="city-select__city ">
+                    <a href="/">Челябинск</a>
                 </li>
             </ul>
             <button class="close-btn close-btn--city-select">
