--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="container">
                     <div class="header__middle">
                         <a class="header__logo" href="index.html" aria-label="Перейти на главную страницу сайта">
-                            <img src="./img/icons/logo.svg" alt="">
+                            <img src="./img/icons/new-logo.svg" alt="">
                         </a>
                         <button class="oval-btn oval-btn--all-categories blue" id="allCategoriesBtn">
                             Все категории
@@ -6896,32 +6896,32 @@
                 Популярные города
             </p>
             <ul class="city-select__cities">
-                <li class="city-select__city">
-                    <span>Екатеринбург</span>
+                <li class="city-select__city active">
+                    <a href="/">Екатеринбург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Москва</span>
+                <li class="city-select__city ">
+                    <a href="/">Москва</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Санкт-Петербург</span>
+                <li class="city-select__city ">
+                    <a href="/">Санкт-Петербург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Тюмень</span>
+                <li class="city-select__city ">
+                    <a href="/">Тюмень</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Новосибирск</span>
+                <li class="city-select__city ">
+                    <a href="/">Новосибирск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Казань</span>
+                <li class="city-select__city ">
+                    <a href="/">Казань</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Нижний Новгород</span>
+                <li class="city-select__city ">
+                    <a href="/">Нижний Новгород</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Красноярск</span>
+                <li class="city-select__city ">
+                    <a href="/">Красноярск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Челябинск</span>
+                <li class="city-select__city ">
+                    <a href="/">Челябинск</a>
                 </li>
             </ul>
             <button class="close-btn close-btn--city-select">
