--- a/product.html
+++ b/product.html
@@ -2074,11 +2074,6 @@
                                                 d="M15.4233 13.4529C14.465 13.4529 13.6017 13.8667 13.0025 14.525L7.61293 11.187C7.75682 10.8186 7.83663 10.4185 7.83663 9.99998C7.83663 9.58128 7.75682 9.1812 7.61293 8.813L13.0025 5.47484C13.6017 6.13311 14.465 6.54708 15.4233 6.54708C17.2284 6.54708 18.6969 5.07857 18.6969 3.27346C18.6969 1.46835 17.2284 0 15.4233 0C13.6182 0 12.1497 1.4685 12.1497 3.27361C12.1497 3.69216 12.2296 4.09225 12.3734 4.46059L6.98397 7.7986C6.38476 7.14034 5.52141 6.72637 4.56316 6.72637C2.75805 6.72637 1.28955 8.19502 1.28955 9.99998C1.28955 11.8051 2.75805 13.2736 4.56316 13.2736C5.52141 13.2736 6.38476 12.8598 6.98397 12.2014L12.3734 15.5394C12.2296 15.9077 12.1497 16.3078 12.1497 16.7265C12.1497 18.5315 13.6182 20 15.4233 20C17.2284 20 18.6969 18.5315 18.6969 16.7265C18.6969 14.9214 17.2284 13.4529 15.4233 13.4529ZM13.3434 3.27361C13.3434 2.12677 14.2764 1.19369 15.4233 1.19369C16.5701 1.19369 17.5032 2.12677 17.5032 3.27361C17.5032 4.42046 16.5701 5.35354 15.4233 5.35354C14.2764 5.35354 13.3434 4.42046 13.3434 3.27361ZM4.56316 12.0799C3.41616 12.0799 2.48309 11.1468 2.48309 9.99998C2.48309 8.85313 3.41616 7.92006 4.56316 7.92006C5.71001 7.92006 6.64293 8.85313 6.64293 9.99998C6.64293 11.1468 5.71001 12.0799 4.56316 12.0799ZM13.3434 16.7263C13.3434 15.5795 14.2764 14.6464 15.4233 14.6464C16.5701 14.6464 17.5032 15.5795 17.5032 16.7263C17.5032 17.8732 16.5701 18.8063 15.4233 18.8063C14.2764 18.8063 13.3434 17.8732 13.3434 16.7263Z"
                                                 fill="#282739" />
                                         </g>
-                                        <defs>
-                                            <clipPath id="clip0_168_1460">
-                                                <rect width="20" height="20" fill="white" />
-                                            </clipPath>
-                                        </defs>
                                     </svg>
                                     <button>
                                         Поделиться
@@ -2101,11 +2096,6 @@
                                                 d="M11.5167 9.94733V9.38843H9.25183V12.6922H9.9189V11.2882H11.2981V10.7293H9.9189V9.94733H11.5167Z"
                                                 fill="#282739" />
                                         </g>
-                                        <defs>
-                                            <clipPath id="clip0_224_2550">
-                                                <rect width="20" height="20" fill="white" />
-                                            </clipPath>
-                                        </defs>
                                     </svg>
                                     <span>
                                         PDF
@@ -5128,32 +5118,32 @@
                 Популярные города
             </p>
             <ul class="city-select__cities">
-                <li class="city-select__city">
-                    <span>Екатеринбург</span>
+                <li class="city-select__city active">
+                    <a href="/">Екатеринбург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Москва</span>
+                <li class="city-select__city ">
+                    <a href="/">Москва</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Санкт-Петербург</span>
+                <li class="city-select__city ">
+                    <a href="/">Санкт-Петербург</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Тюмень</span>
+                <li class="city-select__city ">
+                    <a href="/">Тюмень</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Новосибирск</span>
+                <li class="city-select__city ">
+                    <a href="/">Новосибирск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Казань</span>
+                <li class="city-select__city ">
+                    <a href="/">Казань</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Нижний Новгород</span>
+                <li class="city-select__city ">
+                    <a href="/">Нижний Новгород</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Красноярск</span>
+                <li class="city-select__city ">
+                    <a href="/">Красноярск</a>
                 </li>
-                <li class="city-select__city">
-                    <span>Челябинск</span>
+                <li class="city-select__city ">
+                    <a href="/">Челябинск</a>
                 </li>
             </ul>
             <button class="close-btn close-btn--city-select">
