--- a/product.html
+++ b/product.html
@@ -2067,46 +2067,13 @@
                                     </div>
                                 </div>
                                 <div class="product-box__tool product-box__tool--share">
-                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/svg">
-                                        <g clip-path="url(#clip0_168_1460)">
-                                            <path
-                                                d="M15.4233 13.4529C14.465 13.4529 13.6017 13.8667 13.0025 14.525L7.61293 11.187C7.75682 10.8186 7.83663 10.4185 7.83663 9.99998C7.83663 9.58128 7.75682 9.1812 7.61293 8.813L13.0025 5.47484C13.6017 6.13311 14.465 6.54708 15.4233 6.54708C17.2284 6.54708 18.6969 5.07857 18.6969 3.27346C18.6969 1.46835 17.2284 0 15.4233 0C13.6182 0 12.1497 1.4685 12.1497 3.27361C12.1497 3.69216 12.2296 4.09225 12.3734 4.46059L6.98397 7.7986C6.38476 7.14034 5.52141 6.72637 4.56316 6.72637C2.75805 6.72637 1.28955 8.19502 1.28955 9.99998C1.28955 11.8051 2.75805 13.2736 4.56316 13.2736C5.52141 13.2736 6.38476 12.8598 6.98397 12.2014L12.3734 15.5394C12.2296 15.9077 12.1497 16.3078 12.1497 16.7265C12.1497 18.5315 13.6182 20 15.4233 20C17.2284 20 18.6969 18.5315 18.6969 16.7265C18.6969 14.9214 17.2284 13.4529 15.4233 13.4529ZM13.3434 3.27361C13.3434 2.12677 14.2764 1.19369 15.4233 1.19369C16.5701 1.19369 17.5032 2.12677 17.5032 3.27361C17.5032 4.42046 16.5701 5.35354 15.4233 5.35354C14.2764 5.35354 13.3434 4.42046 13.3434 3.27361ZM4.56316 12.0799C3.41616 12.0799 2.48309 11.1468 2.48309 9.99998C2.48309 8.85313 3.41616 7.92006 4.56316 7.92006C5.71001 7.92006 6.64293 8.85313 6.64293 9.99998C6.64293 11.1468 5.71001 12.0799 4.56316 12.0799ZM13.3434 16.7263C13.3434 15.5795 14.2764 14.6464 15.4233 14.6464C16.5701 14.6464 17.5032 15.5795 17.5032 16.7263C17.5032 17.8732 16.5701 18.8063 15.4233 18.8063C14.2764 18.8063 13.3434 17.8732 13.3434 16.7263Z"
-                                                fill="#282739" />
-                                        </g>
-                                        <defs>
-                                            <clipPath id="clip0_168_1460">
-                                                <rect width="20" height="20" fill="white" />
-                                            </clipPath>
-                                        </defs>
-                                    </svg>
+                                    <img src="./img/icons/share.svg" alt="" width="20" height="20">
                                     <button>
                                         Поделиться
                                     </button>
                                 </div>
                                 <a class="product-box__tool product-box__tool--pdf" download href="./files/product-pdf.pdf">
-                                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/svg">
-                                        <g clip-path="url(#clip0_224_2550)">
-                                            <path
-                                                d="M19.3156 5.41238L14.2203 0.117891C14.1478 0.0425781 14.0477 0 13.9432 0H6.34901C5.49913 0 4.80769 0.691172 4.80769 1.5407V6.92309H1.73007C1.09421 6.92309 0.576904 7.44023 0.576904 8.07594V13.8472C0.576904 14.4829 1.09421 15 1.73007 15H4.80769V18.462C4.80769 19.31 5.49913 20 6.34901 20H17.8817C18.7316 20 19.4231 19.3104 19.4231 18.4629V5.6791C19.4231 5.57965 19.3845 5.48406 19.3156 5.41238ZM14.0385 1.03832L18.2212 5.38461H14.0385V1.03832ZM1.73007 14.2308C1.51835 14.2308 1.34616 14.0587 1.34616 13.8472V8.07594C1.34616 7.86441 1.51839 7.6923 1.73007 7.6923H12.1161C12.3278 7.6923 12.5 7.86441 12.5 8.07594V13.8472C12.5 14.0587 12.3278 14.2308 12.1161 14.2308H1.73007ZM18.6538 18.4629C18.6538 18.8863 18.3075 19.2308 17.8817 19.2308H6.34901C5.92327 19.2308 5.5769 18.8859 5.5769 18.462V15H12.1161C12.7519 15 13.2692 14.4829 13.2692 13.8472V8.07594C13.2692 7.44023 12.7519 6.92309 12.1161 6.92309H5.5769V1.5407C5.5769 1.11527 5.92327 0.769219 6.34901 0.769219H13.2692V5.76922C13.2692 5.98164 13.4414 6.15383 13.6538 6.15383H18.6538V18.4629Z"
-                                                fill="#282739" />
-                                            <path
-                                                d="M5.17507 9.7614C5.04738 9.59538 4.88886 9.48757 4.69957 9.438C4.57636 9.40495 4.31195 9.38843 3.90628 9.38843H2.83582V12.6922H3.50289V11.446H3.93785C4.23984 11.446 4.47046 11.4302 4.62972 11.3986C4.74691 11.3731 4.86222 11.3209 4.97566 11.242C5.0891 11.1631 5.18261 11.0546 5.25625 10.9164C5.32988 10.7782 5.36667 10.6076 5.36667 10.4048C5.36664 10.1419 5.30277 9.92741 5.17507 9.7614ZM4.60378 10.6707C4.55347 10.7444 4.48398 10.7984 4.39531 10.833C4.30664 10.8676 4.13089 10.8848 3.86796 10.8848H3.50289V9.94733H3.82515C4.06554 9.94733 4.22554 9.95483 4.30515 9.96987C4.41332 9.9894 4.50273 10.0382 4.57332 10.1164C4.64394 10.1945 4.67925 10.2937 4.67925 10.4138C4.67929 10.5115 4.6541 10.5971 4.60378 10.6707Z"
-                                                fill="#282739" />
-                                            <path
-                                                d="M8.57351 10.291C8.5014 10.0799 8.39621 9.90151 8.258 9.75577C8.1198 9.61003 7.95375 9.50862 7.75996 9.45151C7.61574 9.40944 7.40613 9.38843 7.13121 9.38843H5.91199V12.6922H7.16726C7.41367 12.6922 7.61046 12.6689 7.75769 12.6223C7.95453 12.5592 8.11078 12.4714 8.22644 12.3587C8.37968 12.2099 8.49761 12.0154 8.58027 11.775C8.64789 11.5782 8.68167 11.3438 8.68167 11.0719C8.68167 10.7624 8.64562 10.5021 8.57351 10.291ZM7.92445 11.6477C7.87937 11.7957 7.82117 11.902 7.7498 11.9666C7.67843 12.0312 7.58867 12.077 7.4805 12.104C7.39789 12.1251 7.26339 12.1356 7.0771 12.1356H6.57906V9.94733H6.87878C7.1507 9.94733 7.33328 9.95784 7.4264 9.9789C7.55109 10.0059 7.65402 10.0578 7.73515 10.1344C7.81628 10.211 7.87937 10.3177 7.92445 10.4544C7.96953 10.5911 7.99207 10.7872 7.99207 11.0426C7.99207 11.298 7.96953 11.4997 7.92445 11.6477Z"
-                                                fill="#282739" />
-                                            <path
-                                                d="M11.5167 9.94733V9.38843H9.25183V12.6922H9.9189V11.2882H11.2981V10.7293H9.9189V9.94733H11.5167Z"
-                                                fill="#282739" />
-                                        </g>
-                                        <defs>
-                                            <clipPath id="clip0_224_2550">
-                                                <rect width="20" height="20" fill="white" />
-                                            </clipPath>
-                                        </defs>
-                                    </svg>
+                                    <img src="./img/icons/pdf.svg" alt="" width="20" height="20">
                                     <span>
                                         PDF
                                     </span>
@@ -2245,7 +2212,7 @@
                                     </div>
                                     <a class="product-box__tool product-box__tool--pdf" download href="./files/product-pdf.pdf">
                                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/2000/svg">
                                             <g clip-path="url(#clip0_224_25501)">
                                                 <path
                                                     d="M19.3156 5.41238L14.2203 0.117891C14.1478 0.0425781 14.0477 0 13.9432 0H6.34901C5.49913 0 4.80769 0.691172 4.80769 1.5407V6.92309H1.73007C1.09421 6.92309 0.576904 7.44023 0.576904 8.07594V13.8472C0.576904 14.4829 1.09421 15 1.73007 15H4.80769V18.462C4.80769 19.31 5.49913 20 6.34901 20H17.8817C18.7316 20 19.4231 19.3104 19.4231 18.4629V5.6791C19.4231 5.57965 19.3845 5.48406 19.3156 5.41238ZM14.0385 1.03832L18.2212 5.38461H14.0385V1.03832ZM1.73007 14.2308C1.51835 14.2308 1.34616 14.0587 1.34616 13.8472V8.07594C1.34616 7.86441 1.51839 7.6923 1.73007 7.6923H12.1161C12.3278 7.6923 12.5 7.86441 12.5 8.07594V13.8472C12.5 14.0587 12.3278 14.2308 12.1161 14.2308H1.73007ZM18.6538 18.4629C18.6538 18.8863 18.3075 19.2308 17.8817 19.2308H6.34901C5.92327 19.2308 5.5769 18.8859 5.5769 18.462V15H12.1161C12.7519 15 13.2692 14.4829 13.2692 13.8472V8.07594C13.2692 7.44023 12.7519 6.92309 12.1161 6.92309H5.5769V1.5407C5.5769 1.11527 5.92327 0.769219 6.34901 0.769219H13.2692V5.76922C13.2692 5.98164 13.4414 6.15383 13.6538 6.15383H18.6538V18.4629Z"
