Правки[2], изменение дизайн стиля сайта

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                                     </div>
                                     <div class="search-counter collapse">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -151,7 +151,7 @@
                                     </div>
                                     <div class="search-counter">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="33">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -161,12 +161,12 @@
                         </form>
 
                         <div class="working-period">
-                            <p class="working-days">
-                                пн-пт 9:00 - 18:00; сб-вс выходной
-                            </p>
                             <a class="phone-number" href="tel:+73433799868">
                                 +7 (343) 379-98-68
                             </a>
+                            <p class="working-days">
+                                пн-пт 9:00 - 18:00; сб-вс выходной
+                            </p>
                         </div>
                         <nav class="header-panel">
                             <div class="header-panel__item">
@@ -1717,7 +1717,7 @@
                                     </div>
                                     <div class="search-counter collapse">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -1738,7 +1738,7 @@
                                     </div>
                                     <div class="search-counter">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -2303,7 +2303,7 @@
                                         </div>
                                     </div>
                                     <div class="about-office__info-half">
-                                        <img src="./img/icons/contacts-tel.svg" alt="">
+                                        <img src="./img/icons/contacts-mail.svg" alt="">
                                         <div class="about-office__info-tel">
                                             <p>E-mail</p>
                                             <a href="mailto:sale@ekrom.ru">
