--- a/compare.html
+++ b/compare.html
@@ -129,7 +129,7 @@
                                     </div>
                                     <div class="search-counter collapse">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -150,7 +150,7 @@
                                     </div>
                                     <div class="search-counter">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="33">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -160,12 +160,12 @@
                         </form>
 
                         <div class="working-period">
-                            <p class="working-days">
-                                пн-пт 9:00 - 18:00; сб-вс выходной
-                            </p>
                             <a class="phone-number" href="tel:+73433799868">
                                 +7 (343) 379-98-68
                             </a>
+                            <p class="working-days">
+                                пн-пт 9:00 - 18:00; сб-вс выходной
+                            </p>
                         </div>
                         <nav class="header-panel">
                             <div class="header-panel__item">
@@ -1716,7 +1716,7 @@
                                     </div>
                                     <div class="search-counter collapse">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -1737,7 +1737,7 @@
                                     </div>
                                     <div class="search-counter">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -2088,7 +2088,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -2410,7 +2410,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -2732,7 +2732,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -3054,7 +3054,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -3376,7 +3376,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -3698,7 +3698,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -4036,7 +4036,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
@@ -4358,7 +4358,7 @@
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                                     d="M6.46583 9.99906L0.733148 4.26638C-0.244383 3.29135 -0.244383 1.7063 0.733148 0.731273C1.70818 -0.243758 3.29323 -0.243758 4.26826 0.731273L10.0009 6.46395L15.7336 0.731273C16.7086 -0.243758 18.2937 -0.243758 19.2687 0.731273C20.2438 1.7063 20.2438 3.29135 19.2687 4.26638L13.536 9.99906L19.2687 15.7317C20.2438 16.7068 20.2438 18.2918 19.2687 19.2669C18.2937 20.2419 16.7086 20.2419 15.7336 19.2669L10.0009 13.5342L4.26826 19.2669C3.29323 20.2419 1.70818 20.2419 0.733148 19.2669C-0.244383 18.2918 -0.244383 16.7068 0.733148 15.7317L6.46583 9.99906Z"
-                                                    fill="#537ce5"></path>
+                                                    fill="#0b4250"></path>
                                             </svg>
                                         </button>
                                         <div class="product-card__img-box skeleton">
