--- a/order.html
+++ b/order.html
@@ -127,7 +127,7 @@
                                     </div>
                                     <div class="search-counter collapse">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="1">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -148,7 +148,7 @@
                                     </div>
                                     <div class="search-counter">
                                         <button class="minus" type="button">-</button>
-                                        <span>1</span>
+                                        <input type="number" value="33">
                                         <button class="plus" type="button">+</button>
                                     </div>
 
@@ -158,12 +158,12 @@
                         </form>
 
                         <div class="working-period">
-                            <p class="working-days">
-                                пн-пт 9:00 - 18:00; сб-вс выходной
-                            </p>
                             <a class="phone-number" href="tel:+73433799868">
                                 +7 (343) 379-98-68
                             </a>
+                            <p class="working-days">
+                                пн-пт 9:00 - 18:00; сб-вс выходной
+                            </p>
                         </div>
                         <nav class="header-panel">
                             <div class="header-panel__item">
