--- a/pdf-product.html
+++ b/pdf-product.html
@@ -199,7 +199,7 @@
             position: absolute;
             width: 20px;
             height: 20px;
-            border: 2px solid #537ce5;
+            border: 2px solid #0b4250;
             top: 0;
             left: 0;
         }
