--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/media.css">
 </head>
 
-<body>
+<body style="background-color:#272a2b">
     <div class="wrapper">
         <header class="header" id="stickyHeader">
             <div class="header__top">
