--- a/action.html
+++ b/action.html
@@ -9557,7 +9557,7 @@
         </footer>
     </div>
 
-    <div id="fastView" class="modal" data-modal>
+    <!-- <div id="fastView" class="modal" data-modal>
         <div class="fast-view__container modal-container" data-modal-container>
             <div class="fast-view__header">
                 <button class="close-btn close-btn--fastview">
@@ -10173,7 +10173,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="citySelect" class="modal" data-modal>
         <div class="city-select modal-container" data-modal-container>
