--- a/index.html
+++ b/index.html
@@ -2254,7 +2254,7 @@
                 </div>
             </section>
 
-            <section class="complects">
+            <!-- <section class="complects">
                 <div class="container">
                     <div class="title title--center skeleton">
                         <h2>Популярные готовые комплекты</h2>
@@ -2356,7 +2356,7 @@
                         </svg>
                     </a>
                 </div>
-            </section>
+            </section> -->
 
             <section class="bestseller">
                 <div class="container">
@@ -6196,7 +6196,7 @@
     </div>
 
 
-    <div id="fastView" class="modal" data-modal>
+    <!-- <div id="fastView" class="modal" data-modal>
         <div class="fast-view__container modal-container" data-modal-container>
             <div class="fast-view__header">
                 <button class="close-btn close-btn--fastview">
@@ -6812,7 +6812,7 @@
 
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="questionForm" class="modal" data-modal>
         <div class="container modal-container">
