--- a/product.html
+++ b/product.html
@@ -2373,8 +2373,8 @@
                                                 </label>
                                             </li>
                                             <li class="product-box__colors-item">
-                                                <input id="color-7" type="radio" name="color">
-                                                <label class="product-box__colors-color" for="color-7">
+                                                <label class="product-box__colors-color">
+                                                    <input type="radio" name="product-color">
                                                 </label>
                                             </li>
                                             <li class="product-box__colors-item">
